--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,15 +31,19 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.3.20
   firebase_core: ^1.18.0
+  firebase_messaging: ^12.0.1
   firebase_storage: ^10.3.1
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^9.7.0
   flutter_typeahead: ^4.0.0
   get: ^4.6.5
   google_fonts: ^3.0.1
   grouped_list: ^5.1.2
+  http: ^0.13.5
   image_picker: ^0.8.5+3
   intl: ^0.17.0
+  syncfusion_flutter_datepicker: ^20.2.40
 
 dev_dependencies:
   flutter_lints: ^2.0.0
